Attempted to fix up validation for header but still jumps around and wont work with the label message because the H1 tag is block

--- a/src/Umbraco.Web.UI.Client/src/less/forms.less
+++ b/src/Umbraco.Web.UI.Client/src/less/forms.less
@@ -391,19 +391,23 @@ input[type="checkbox"][readonly] {
 // --------------------------
 
 // Warning
-.show-validation .control-group.warning {
+.show-validation .control-group.warning,
+.show-validation .umb-headline-editor-wrapper.warning {
   .formFieldState(@formWarningText, @formWarningText, @formWarningBackground);
 }
 // Error
-.show-validation .control-group.error {
+.show-validation .control-group.error,
+.show-validation .umb-headline-editor-wrapper.error {
   .formFieldState(@formErrorText, @formErrorText, @formErrorBackground);
 }
 // Success
-.show-validation .control-group.success {
+.show-validation .control-group.success,
+.show-validation .umb-headline-editor-wrapper.success {
   .formFieldState(@formSuccessText, @formSuccessText, @formSuccessBackground);
 }
 // Success
-.show-validation .control-group.info {
+.show-validation .control-group.info
+.show-validation .umb-headline-editor-wrapper.info {
   .formFieldState(@formInfoText, @formInfoText, @formInfoBackground);
 }
 
